--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
                     <div class="row m-l-0 m-r-0">
                         <div class="col-sm-4 bg-c-lite-green user-profile">
                             <div class="card-block text-center text-white">
-                                <div class="m-b-25"> <img src="img/me.jpg"
+                                <div class="img"> <img src="img/me.jpg"
                                         class="img-radius" alt="User-Profile-Image"> </div>
                                 <h6 class="f-w-600">Hembo Tingor</h6>
                                 <p>Web Designer</p> <i
