--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1 class="display-1">about me page</h1>
 <div class="d-grid gap-2 d-md-block">
-  <button class="btn btn-primary" type="button">Watch</button>
+  <button type="button" class="btn btn-outline-primary">Watch</button>
 </div>
