--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-<h1 class="display-1">about me page</h1>
-<button type="button" class="btn btn-outline-primary">Watch</button>
+<div class="card" style="width: 18rem">
+  <img src="img/DSC_4882.jpg" class="card-img-top" alt="..." />
+  <div class="card-body">
+    <h5 class="card-title">About me page</h5>
+    <p class="card-text">Profile</p>
+    <a href="/Netnapha05.github.io/aboutme.html" class="btn btn-primary"
+      >CLICK</a
+    >
+  </div>
+</div>
