--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<div class="card" style="width: 18rem">
-  <img src="img/DSC_4882.jpg" class="card-img-top" alt="..." />
+<div class="card">
+  <h5 class="card-header">About me page</h5>
   <div class="card-body">
-    <h5 class="card-title">About me page</h5>
+    <h5 class="card-title">Profile</h5>
     <p class="card-text">Profile</p>
     <a href="/Netnapha05.github.io/aboutme.html" class="btn btn-primary"
       >CLICK</a
