--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
   <div class="card-body">
     <h5 class="card-title">Profile</h5>
     <p class="card-text">Profile</p>
-    <a href="/Netnapha05.github.io/aboutme.html" class="btn btn-primary"
-      >CLICK</a
-    >
+    <a href="/aboutme.html" class="btn btn-primary">CLICK</a>
   </div>
 </div>
