--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
-<div class="card">
-  <h5 class="card-header">About me page</h5>
-  <div class="card-body">
-    <h5 class="card-title">Profile</h5>
-    <p class="card-text">Profile</p>
-    <a href="/aboutme.html" class="btn btn-primary">CLICK</a>
-  </div>
-</div>
+<button type="button" class="btn btn-primary position-relative">
+  Profile
+  <span
+    class="
+      position-absolute
+      top-0
+      start-100
+      translate-middle
+      p-2
+      bg-danger
+      border border-light
+      rounded-circle
+    "
+  >
+    <span class="visually-hidden">New alerts</span>
+  </span>
+  <a href="/aboutme.html" class="btn btn-primary">CLICK</a>
+</button>
