--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<h6>About me Page <span class="badge bg-secondary">New</span></h6>
 <button type="button" class="btn btn-primary position-relative">
   Profile
   <span
@@ -10,9 +11,7 @@
       bg-danger
       border border-light
       rounded-circle
-    "
-  >
-    <span class="visually-hidden">New alerts</span>
-  </span>
-  <a href="/aboutme.html" class="btn btn-primary">CLICK</a>
+    " 
+     <a href="/aboutme.html" class="btn btn-primary">CLICK</a>
 </button>
+
