--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h6>About me Page <span class="badge bg-secondary">New</span></h6>
+<h3>About me Page </h3>
 <button type="button" class="btn btn-primary position-relative">
   Profile
   <span
