--- a/aboutme.html
+++ b/aboutme.html
@@ -1,61 +1,122 @@
-<div class="page-content page-container" id="page-content">
-    <div class="padding">
-        <div class="row container d-flex justify-content-center">
-            <div class="col-xl-6 col-md-12">
-                <div class="card user-card-full">
-                    <div class="row m-l-0 m-r-0">
-                        <div class="col-sm-4 bg-c-lite-green user-profile">
-                            <div class="card-block text-center text-white">
-                                <div class="img"> <img src="img/me.jpg"
-                                        class="img-radius" alt="User-Profile-Image"> </div>
-                                <h6 class="f-w-600">Hembo Tingor</h6>
-                                <p>Web Designer</p> <i
-                                    class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
-                            </div>
-                        </div>
-                        <div class="col-sm-8">
-                            <div class="card-block">
-                                <h6 class="m-b-20 p-b-5 b-b-default f-w-600">Information</h6>
-                                <div class="row">
-                                    <div class="col-sm-6">
-                                        <p class="m-b-10 f-w-600">Email</p>
-                                        <h6 class="text-muted f-w-400">Netnapha_th@kkumail.com</h6>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <p class="m-b-10 f-w-600">Phone</p>
-                                        <h6 class="text-muted f-w-400">0621372327</h6>
-                                    </div>
-                                </div>
-                                <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600">Projects</h6>
-                                <div class="row">
-                                    <div class="col-sm-6">
-                                        <p class="m-b-10 f-w-600">Recent</p>
-                                        <h6 class="text-muted f-w-400">Sam Disuja</h6>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <p class="m-b-10 f-w-600">Most Viewed</p>
-                                        <h6 class="text-muted f-w-400">Dinoter husainm</h6>
-                                    </div>
-                                </div>
-                                <ul class="social-link list-unstyled m-t-40 m-b-10">
-                                    <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title=""
-                                            data-original-title="facebook" data-abc="true"><i
-                                                class="mdi mdi-facebook feather icon-facebook facebook"
-                                                aria-hidden="true"></i></a></li>
-                                    <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title=""
-                                            data-original-title="twitter" data-abc="true"><i
-                                                class="mdi mdi-twitter feather icon-twitter twitter"
-                                                aria-hidden="true"></i></a></li>
-                                    <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title=""
-                                            data-original-title="instagram" data-abc="true"><i
-                                                class="mdi mdi-instagram feather icon-instagram instagram"
-                                                aria-hidden="true"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+<head>
+  <link
+    rel="stylesheet"
+    href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"
+  />
+
+  <link
+    href="https://fonts.googleapis.com/css?family=Lato:400,300"
+    rel="stylesheet"
+    type="text/css"
+  />
+</head>
+
+<div class="box">
+  <div id="overlay">
+    <div class="image">
+      <div class="trick"></div>
     </div>
+    <ul class="text">
+      Netnapha Thaoang
+    </ul>
+    <div class="text1">CIS 4</div>
+
+    <div
+      class="panel-group"
+      id="accordion"
+      role="tablist"
+      aria-multiselectable="true"
+    >
+      <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="headingOne">
+          <h4 class="panel-title">
+            <a
+              role="button"
+              data-toggle="collapse"
+              data-parent="#accordion"
+              href="#collapseOne"
+              aria-expanded=""
+              aria-controls="collapseOne"
+            >
+              <div class="title btn btn-danger btn-outline btn-lg">
+                ABOUT ME
+              </div>
+            </a>
+          </h4>
+        </div>
+        <div
+          id="collapseOne"
+          class="panel-collapse collapse in"
+          role="tabpanel"
+          aria-labelledby="headingOne"
+        >
+          <div class="panel-body">
+            Name : Netnapha Thaoang Nickname : Cream University : Khon Kean
+            University Nongkhai campus Student ID : 623410069-8 Major : Computer
+            and Information Science
+          </div>
+        </div>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="headingTwo">
+          <h4 class="panel-title">
+            <a
+              class="collapsed"
+              role="button"
+              data-toggle="collapse"
+              data-parent="#accordion"
+              href="#collapseTwo"
+              aria-expanded="false"
+              aria-controls="collapseTwo"
+            >
+              <div class="title btn btn-danger btn-outline btn-lg">SOCIAL</div>
+            </a>
+          </h4>
+        </div>
+        <div
+          id="collapseTwo"
+          class="panel-collapse collapse"
+          role="tabpanel"
+          aria-labelledby="headingTwo"
+        >
+          <div class="panel-body">
+            email : netnapha_th@kkumail.com facebook :
+            <a href="https://www.facebook.com/aatom.sumate/"
+              >Netnapha Thaoang</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="headingThree">
+          <h4 class="panel-title">
+            <a
+              class="collapsed"
+              role="button"
+              data-toggle="collapse"
+              data-parent="#accordion"
+              href="#collapseThree"
+              aria-expanded="false"
+              aria-controls="collapseThree"
+            >
+              <div class="title btn btn-danger btn-outline btn-lg">CONTACT</div>
+            </a>
+          </h4>
+        </div>
+        <div
+          id="collapseThree"
+          class="panel-collapse collapse"
+          role="tabpanel"
+          aria-labelledby="headingThree"
+        >
+          <div class="panel-body">
+            <div class="panel-body">
+              Tel. : 0621372327
+              <a href="https://github.com/Netnapha05">Github</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
