--- a/aboutme.html
+++ b/aboutme.html
@@ -24,9 +24,8 @@
       </div>
       <div class="col-md-6">
         <div class="profile-head">
-          <h5>Kshiti Ghelani</h5>
-          <h6>Web Developer and Designer</h6>
-          <p class="proile-rating">RANKINGS : <span>8/10</span></p>
+          <h5>Netnapha Thaoang</h5>
+          <h6>Student</h6>
           <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item">
               <a
@@ -38,18 +37,6 @@
                 aria-controls="home"
                 aria-selected="true"
                 >About</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                id="profile-tab"
-                data-toggle="tab"
-                href="#profile"
-                role="tab"
-                aria-controls="profile"
-                aria-selected="false"
-                >Timeline</a
               >
             </li>
           </ul>
@@ -65,20 +52,6 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4">
-        <div class="profile-work">
-          <p>WORK LINK</p>
-          <a href="">Website Link</a><br />
-          <a href="">Bootsnipp Profile</a><br />
-          <a href="">Bootply Profile</a>
-          <p>SKILLS</p>
-          <a href="">Web Designer</a><br />
-          <a href="">Web Developer</a><br />
-          <a href="">WordPress</a><br />
-          <a href="">WooCommerce</a><br />
-          <a href="">PHP, .Net</a><br />
-        </div>
-      </div>
       <div class="col-md-8">
         <div class="tab-content profile-tab" id="myTabContent">
           <div
@@ -89,18 +62,10 @@
           >
             <div class="row">
               <div class="col-md-6">
-                <label>User Id</label>
-              </div>
-              <div class="col-md-6">
-                <p>Kshiti123</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
                 <label>Name</label>
               </div>
               <div class="col-md-6">
-                <p>Kshiti Ghelani</p>
+                <p>Netnapha Thaoang</p>
               </div>
             </div>
             <div class="row">
@@ -108,7 +73,7 @@
                 <label>Email</label>
               </div>
               <div class="col-md-6">
-                <p>kshitighelani@gmail.com</p>
+                <p>netnapha_th@kkumail.com</p>
               </div>
             </div>
             <div class="row">
@@ -116,15 +81,15 @@
                 <label>Phone</label>
               </div>
               <div class="col-md-6">
-                <p>123 456 7890</p>
+                <p>0621372327</p>
               </div>
             </div>
             <div class="row">
               <div class="col-md-6">
-                <label>Profession</label>
+                <label>Github</label>
               </div>
               <div class="col-md-6">
-                <p>Web Developer and Designer</p>
+                <a href="https://github.com/Netnapha05">netnapha05</a><br />
               </div>
             </div>
           </div>
@@ -133,54 +98,7 @@
             id="profile"
             role="tabpanel"
             aria-labelledby="profile-tab"
-          >
-            <div class="row">
-              <div class="col-md-6">
-                <label>Experience</label>
-              </div>
-              <div class="col-md-6">
-                <p>Expert</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Hourly Rate</label>
-              </div>
-              <div class="col-md-6">
-                <p>10$/hr</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Total Projects</label>
-              </div>
-              <div class="col-md-6">
-                <p>230</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>English Level</label>
-              </div>
-              <div class="col-md-6">
-                <p>Expert</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Availability</label>
-              </div>
-              <div class="col-md-6">
-                <p>6 months</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-12">
-                <label>Your Bio</label><br />
-                <p>Your detail description</p>
-              </div>
-            </div>
-          </div>
+          ></div>
         </div>
       </div>
     </div>
