--- a/aboutme.html
+++ b/aboutme.html
@@ -12,11 +12,7 @@
     <div class="row">
       <div class="col-md-4">
         <div class="profile-img">
-          <img src="/img/DSC_4882.jpg" alt="" />
-          <div class="file btn btn-lg btn-primary">
-            Change Photo
-            <input type="file" name="file" />
-          </div>
+          <img src="/img/DSC_4882.jpg" width="150" height="150" alt" =" />
         </div>
       </div>
       <div class="col-md-6">
