--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
     <div class="row">
       <div class="col-md-4">
         <div class="profile-img">
-          <img src="/img/DSC_4882.jpg" width="150" height="150" alt" =" />
+          <img src="/img/123.jpg" width="200" height="150" alt="" />
         </div>
       </div>
       <div class="col-md-6">
@@ -54,33 +54,41 @@
             aria-labelledby="home-tab"
           >
             <div class="row">
-              <div class="col-md-6">
-                <label>Name</label>
-              </div>
+              <h5 class="card-title">Name</h5>
               <div class="col-md-6">
                 <p>Netnapha Thaoang</p>
               </div>
             </div>
             <div class="row">
+              <h5 class="card-title">NickName</h5>
+              </div>
               <div class="col-md-6">
-                <label>Email</label>
+                <p>Cream</p>
+              </div>
+            </div>
+            <div class="row">
+              <h5 class="card-title">Email</h5>
               </div>
               <div class="col-md-6">
                 <p>netnapha_th@kkumail.com</p>
               </div>
             </div>
             <div class="row">
-              <div class="col-md-6">
-                <label>Phone</label>
+              <h5 class="card-title">Education</h5>
               </div>
               <div class="col-md-6">
-                <p>0621372327</p>
+                <p>high school : Thabo Vocational technological College</p>
+                <p>University : Khon Kaen University</p>
               </div>
             </div>
             <div class="row">
+              <h5 class="card-title">Phone</h5>
               <div class="col-md-6">
-                <label>Github</label>
+                <p>062-1372327</p>
               </div>
+            </div>
+            <div class="row">
+              <h5 class="card-title">Github</h5>
               <div class="col-md-6">
                 <a href="https://github.com/Netnapha05">netnapha05</a><br />
               </div>
