--- a/aboutme.html
+++ b/aboutme.html
@@ -1,107 +1,111 @@
-<link
-  href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-  rel="stylesheet"
-  id="bootstrap-css"
-/>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
-
-<div class="container emp-profile">
-  <form method="post">
-    <div class="row">
-      <div class="col-md-4">
-        <div class="profile-img">
-          <img src="/img/123.jpg" width="200" height="150" alt="" />
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="profile-head">
-          <h5>Netnapha Thaoang</h5>
-          <h6>Student</h6>
-          <ul class="nav nav-tabs" id="myTab" role="tablist">
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                id="home-tab"
-                data-toggle="tab"
-                href="#home"
-                role="tab"
-                aria-controls="home"
-                aria-selected="true"
-                >About</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="col-md-2">
-        <input
-          type="submit"
-          class="profile-edit-btn"
-          name="btnAddMore"
-          value="Edit Profile"
-        />
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-8">
-        <div class="tab-content profile-tab" id="myTabContent">
-          <div
-            class="tab-pane fade show active"
-            id="home"
-            role="tabpanel"
-            aria-labelledby="home-tab"
-          >
-            <div class="row">
-              <h5 class="card-title">Name</h5>
-              <div class="col-md-6">
-                <p>Netnapha Thaoang</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Profile</title>
+    <link href="css/aboutme.css" rel="stylesheet" />
+  </head>
+  <body>
+    <body bgcolor="fffae5"></body>
+    <center>
+      <div class="container">
+        <div class="row align-items-center flex-row-reverse">
+          <div class="col-lg-6">
+            <div class="about-text go-to">
+              <p><span style="font-size: 100px">aboutme</span></p>
+              <div class="col-lg-6">
+                <div class="about-avatar">
+                  <img src="/img/123.jpg" width="430" height="300" />
+                </div>
               </div>
-            </div>
-            <div class="row">
-              <h5 class="card-title">NickName</h5>
-              </div>
-              <div class="col-md-6">
-                <p>Cream</p>
-              </div>
-            </div>
-            <div class="row">
-              <h5 class="card-title">Email</h5>
-              </div>
-              <div class="col-md-6">
-                <p>netnapha_th@kkumail.com</p>
-              </div>
-            </div>
-            <div class="row">
-              <h5 class="card-title">Education</h5>
-              </div>
-              <div class="col-md-6">
-                <p>high school : Thabo Vocational technological College</p>
-                <p>University : Khon Kaen University</p>
-              </div>
-            </div>
-            <div class="row">
-              <h5 class="card-title">Phone</h5>
-              <div class="col-md-6">
-                <p>062-1372327</p>
-              </div>
-            </div>
-            <div class="row">
-              <h5 class="card-title">Github</h5>
-              <div class="col-md-6">
-                <a href="https://github.com/Netnapha05">netnapha05</a><br />
+              <p>
+                <span style="font-size: 50px"
+                  >Student - Computer and Information Science</span
+                >
+              </p>
+              <div class="row about-list">
+                <div class="col-md-6">
+                  <div class="media">
+                    <label><span style="font-size: 30px">Birthday</span></label>
+                    <p><span style="font-size: 20px">5th March 2001</span></p>
+                  </div>
+                  <div class="media">
+                    <label><span style="font-size: 30px">Age</span></label>
+                    <p><span style="font-size: 20px">21 Yr</span></p>
+                  </div>
+                  <div class="media">
+                    <label
+                      ><span style="font-size: 30px">Education</span></label
+                    >
+                    <p>
+                      <span style="font-size: 20px"
+                        >High school : Thabo Vocational technological
+                        College</span
+                      >
+                    </p>
+                    <p>
+                      <span style="font-size: 20px">
+                        : Khon Kaen University</span
+                      >
+                    </p>
+                  </div>
+                  <div class="media">
+                    <label><span style="font-size: 30px">Province</span></label>
+                    <p><span style="font-size: 20px">Nong Khai</span></p>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="media">
+                    <label><span style="font-size: 30px">E-mail</span></label>
+                    <p>
+                      <span style="font-size: 20px"
+                        >netnapha_th@kkumail.com</span
+                      >
+                    </p>
+                  </div>
+                  <div class="media">
+                    <label><span style="font-size: 30px">Phone</span></label>
+                    <p><span style="font-size: 20px">062-1372327</span></p>
+                  </div>
+                  <div class="media">
+                    <label><span style="font-size: 30px">Github</span></label>
+                    <a href="https://github.com/Netnapha05" target="_blank"
+                      ><span style="font-size: 20px">Netnapha05</span></a
+                    >
+                  </div>
+                  <div class="media">
+                    <label
+                      ><span style="font-size: 30px">Programming</span></label
+                    >
+                    <p><span style="font-size: 20px">good</span></p>
+                  </div>
+                  <div class="media">
+                    <label><span style="font-size: 30">Database</span></label>
+                    <p><span style="font-size: 20px">good</span></p>
+                  </div>
+                  <div class="media">
+                    <label
+                      ><span style="font-size: 30px"
+                        >Web Technology</span
+                      ></label
+                    >
+                    <p><span style="font-size: 20px">good</span></p>
+                  </div>
+                  <div class="media">
+                    <label
+                      ><span style="font-size: 30px"
+                        >Analysis and Design</span
+                      ></label
+                    >
+                    <p><span style="font-size: 20px">good</span></p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-          <div
-            class="tab-pane fade"
-            id="profile"
-            role="tabpanel"
-            aria-labelledby="profile-tab"
-          ></div>
         </div>
       </div>
-    </div>
-  </form>
-</div>
+    </center>
+  </body>
+</html>
