--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile</title>
-    <link href="css/aboutme.css" rel="stylesheet" />
+    <link href="CSS/aboutme.css" rel="stylesheet" />
   </head>
   <body>
     <body bgcolor="fffae5"></body>
@@ -71,7 +71,7 @@
                   <div class="media">
                     <label><span style="font-size: 30px">Github</span></label>
                     <a href="https://github.com/Netnapha05" target="_blank"
-                      ><span style="font-size: 20px">Netnapha05</span></a
+                      ><span style="font-size: 20px"><br />Netnapha05</span></a
                     >
                   </div>
                   <div class="media">
