--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                     alt="..."
                   />
                   <!-- Portfolio Modal - Text-->
-
+                  <br />
                   <button
                     class="btn btn-primary"
                     onclick="document.location = 'aboutme.html'"
@@ -329,13 +329,14 @@
                   <!-- Portfolio Modal - Image-->
                   <img
                     class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/cake.png"
+                    src="img/checklist.png"
                     alt="..."
                   />
                   <!-- Portfolio Modal - Text-->
+                  <br />
                   <button
                     class="btn btn-primary"
-                    onclick="document.location = 'indexjs.html'"
+                    onclick="document.location = 'TODOLIST.html'"
                   >
                     <i class="fas fa-xmark fa-fw"></i>
                     click!
