--- a/aboutme.html
+++ b/aboutme.html
@@ -46,7 +46,7 @@
                     </p>
                     <p>
                       <span style="font-size: 20px">
-                        : Khon Kaen University</span
+                        University : Khon Kaen University</span
                       >
                     </p>
                   </div>
