--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -113,7 +113,8 @@
                               <div class="text-bg">
                                  <span>Computer And Laptop</span>
                                  <h1>Accessories</h1>
-                                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or </p>
+                                 <p>เป็นร้านคอมพิวเตอร์ออนไลน์ซึ่งจัดจำหน่ายคอมพิวเตอร์ประกอบ Hi-end คอมพิวเตอร์ทั่วไปสินค้าเกมมิ่งเกียร์ และสินค้า ไอที รวมไปถึงอุปกรณ์คอมพิวเตอร์ ไม่ว่าจะเป็น ซีพียี (CPU), เมนบอร์ด(Mainboard), การด์ จอ (Graphic Card), แรม (RAM), เอสเอสดี (SSD), ฮาร์ด ดิส(Harddisk), พาวเวอร์ ซัพพลาย (Power Supply) ชุด น้ำปิด ชุด น้ำเปิด (Liquid Cooling), เคสคอมพิวเตอร์(Case), และ จอคอมพิวเตอร์ (Monitor) โดยเป็นสินค้าจากแบรนดชั้นนำต่าง ๆ ทั้ง AMD / Asrock / ASUS / Corsiar / Galax / Gigabyte / MSI / Thermaltake และอื่น ๆ อีก มากมาย โดยสิน ค้า ทุกชนิดเป็นสินค้าใหม่มือหนึ่งและมี การรับประกันผ่านตัวแทนจำหน่ายในประเทศไทย
+</p>
                                  <a href="#">Buy Now </a> <a href="contact.html">Contact </a>
                               </div>
                            </div>
@@ -134,7 +135,8 @@
                               <div class="text-bg">
                                  <span>Computer And Laptop</span>
                                  <h1>Accessories</h1>
-                                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or </p>
+                                 <p>เป็นร้านคอมพิวเตอร์ออนไลน์ซึ่งจัดจำหน่ายคอมพิวเตอร์ประกอบ Hi-end คอมพิวเตอร์ทั่วไปสินค้าเกมมิ่งเกียร์ และสินค้า ไอที รวมไปถึงอุปกรณ์คอมพิวเตอร์ ไม่ว่าจะเป็น ซีพียี (CPU), เมนบอร์ด(Mainboard), การด์ จอ (Graphic Card), แรม (RAM), เอสเอสดี (SSD), ฮาร์ด ดิส(Harddisk), พาวเวอร์ ซัพพลาย (Power Supply) ชุด น้ำปิด ชุด น้ำเปิด (Liquid Cooling), เคสคอมพิวเตอร์(Case), และ จอคอมพิวเตอร์ (Monitor) โดยเป็นสินค้าจากแบรนดชั้นนำต่าง ๆ ทั้ง AMD / Asrock / ASUS / Corsiar / Galax / Gigabyte / MSI / Thermaltake และอื่น ๆ อีก มากมาย โดยสิน ค้า ทุกชนิดเป็นสินค้าใหม่มือหนึ่งและมี การรับประกันผ่านตัวแทนจำหน่ายในประเทศไทย
+ </p>
                                  <a href="#">Buy Now </a> <a href="contact.html">Contact </a>
                               </div>
                            </div>
@@ -155,49 +157,8 @@
                               <div class="text-bg">
                                  <span>Computer And Laptop</span>
                                  <h1>Accessories</h1>
-                                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or </p>
-                                 <a href="#">Buy Now </a> <a href="contact.html">Contact </a>
-                              </div>
-                           </div>
-                           <div class="col-md-6">
-                              <div class="text_img">
-                                 <figure><img src="shoppingcart/images/pct.png" alt="#"/></figure>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="carousel-item">
-                  <div class="container">
-                     <div class="carousel-caption">
-                        <div class="row">
-                           <div class="col-md-6">
-                              <div class="text-bg">
-                                 <span>Computer And Laptop</span>
-                                 <h1>Accessories</h1>
-                                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or </p>
-                                 <a href="#">Buy Now </a> <a href="contact.html">Contact </a>
-                              </div>
-                           </div>
-                           <div class="col-md-6">
-                              <div class="text_img">
-                                 <figure><img src="shoppingcart/images/pct.png" alt="#"/></figure>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="carousel-item">
-                  <div class="container">
-                     <div class="carousel-caption">
-                        <div class="row">
-                           <div class="col-md-6">
-                              <div class="text-bg">
-                                 <span>Computer And Laptop</span>
-                                 <h1>Accessories</h1>
-                                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or </p>
+                                 <p>เป็นร้านคอมพิวเตอร์ออนไลน์ซึ่งจัดจำหน่ายคอมพิวเตอร์ประกอบ Hi-end คอมพิวเตอร์ทั่วไปสินค้าเกมมิ่งเกียร์ และสินค้า ไอที รวมไปถึงอุปกรณ์คอมพิวเตอร์ ไม่ว่าจะเป็น ซีพียี (CPU), เมนบอร์ด(Mainboard), การด์ จอ (Graphic Card), แรม (RAM), เอสเอสดี (SSD), ฮาร์ด ดิส(Harddisk), พาวเวอร์ ซัพพลาย (Power Supply) ชุด น้ำปิด ชุด น้ำเปิด (Liquid Cooling), เคสคอมพิวเตอร์(Case), และ จอคอมพิวเตอร์ (Monitor) โดยเป็นสินค้าจากแบรนดชั้นนำต่าง ๆ ทั้ง AMD / Asrock / ASUS / Corsiar / Galax / Gigabyte / MSI / Thermaltake และอื่น ๆ อีก มากมาย โดยสิน ค้า ทุกชนิดเป็นสินค้าใหม่มือหนึ่งและมี การรับประกันผ่านตัวแทนจำหน่ายในประเทศไทย
+ </p>
                                  <a href="#">Buy Now </a> <a href="contact.html">Contact </a>
                               </div>
                            </div>
@@ -220,35 +181,6 @@
          </div>
       </section>
       <!-- end banner -->
-      <!-- three_box -->
-      <div class="three_box">
-         <div class="container">
-            <div class="row">
-               <div class="col-md-4">
-                  <div class="box_text">
-                     <i><img src="shoppingcart/images/thr.png" alt="#"/></i>
-                     <h3>Computer</h3>
-                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-                  </div>
-               </div>
-               <div class="col-md-4">
-                  <div class="box_text">
-                     <i><img src="shoppingcart/images/thr1.png" alt="#"/></i>
-                     <h3>Laptop</h3>
-                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-                  </div>
-               </div>
-               <div class="col-md-4">
-                  <div class="box_text">
-                     <i><img src="shoppingcart/images/thr2.png" alt="#"/></i>
-                     <h3>Tablet</h3>
-                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-      <!-- three_box -->
       <!-- products -->
       <div  class="products">
          <div class="container">
@@ -335,7 +267,7 @@
                   <div class="titlepage">
                      <p>Every Computer and laptop</p>
                      <h2>Up to 40% off !</h2>
-                     <a class="read_more" href="#">Shop Now</a>
+                     <a class="read_more" href="#">Shop Now!</a>
                   </div>
                </div>
                <div class="col-md-6">
@@ -348,86 +280,6 @@
       </div>
       </div>
       <!-- end laptop  section -->
-      <!-- customer -->
-      <div class="customer">
-         <div class="container">
-            <div class="row">
-               <div class="col-md-12">
-                  <div class="titlepage">
-                     <h2>Customer Review</h2>
-                  </div>
-               </div>
-            </div>
-            <div class="row">
-               <div class="col-md-12">
-                  <div id="myCarousel" class="carousel slide customer_Carousel " data-ride="carousel">
-                     <ol class="carousel-indicators">
-                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#myCarousel" data-slide-to="1"></li>
-                        <li data-target="#myCarousel" data-slide-to="2"></li>
-                     </ol>
-                     <div class="carousel-inner">
-                        <div class="carousel-item active">
-                           <div class="container">
-                              <div class="carousel-caption ">
-                                 <div class="row">
-                                    <div class="col-md-9 offset-md-3">
-                                       <div class="test_box">
-                                          <i><img src="shoppingcart/images/cos.png" alt="#"/></i>
-                                          <h4>Sandy Miller</h4>
-                                          <p>ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id</p>
-                                       </div>
-                                    </div>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="carousel-item">
-                           <div class="container">
-                              <div class="carousel-caption">
-                                 <div class="row">
-                                    <div class="col-md-9 offset-md-3">
-                                       <div class="test_box">
-                                          <i><img src="shoppingcart/images/cos.png" alt="#"/></i>
-                                          <h4>Sandy Miller</h4>
-                                          <p>ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id</p>
-                                       </div>
-                                    </div>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="carousel-item">
-                           <div class="container">
-                              <div class="carousel-caption">
-                                 <div class="row">
-                                    <div class="col-md-9 offset-md-3">
-                                       <div class="test_box">
-                                          <i><img src="shoppingcart/images/cos.png" alt="#"/></i>
-                                          <h4>Sandy Miller</h4>
-                                          <p>ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id</p>
-                                       </div>
-                                    </div>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                     <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                     <span class="sr-only">Previous</span>
-                     </a>
-                     <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                     <span class="sr-only">Next</span>
-                     </a>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-      <!-- end customer -->
-
       <!--  contact -->
       <div class="contact">
          <div class="container">
@@ -481,13 +333,13 @@
                   <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
                      <h3>About Us</h3>
                      <ul class="about_us">
-                        <li>dolor sit amet, consectetur<br> magna aliqua. Ut enim ad <br>minim veniam, <br> quisdotempor incididunt r</li>
+                        <li>University : Khon Kaen University</li>
                      </ul>
                   </div>
                   <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
                      <h3>Contact Us</h3>
                      <ul class="conta">
-                        <li>dolor sit amet,<br> consectetur <br>magna aliqua.<br> quisdotempor <br>incididunt ut e </li>
+                        <li>112 หมู่ 7 ถนนมิตรภาพ ตำบลหนองกอมเกาะ อำเภอเมืองหนองคาย จังหวัดหนองคาย 43000</li>
                      </ul>
                   </div>
                   <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
